@@ -28,3 +28,23 @@
 @media(min-width:1200px) {
     .resp-align { text-align: right; }
 }
+
+fieldset {
+    border: 1px solid #cccccc !important;
+    margin: 0;
+    xmin-width: 0;
+    padding: 10px;
+    position: relative;
+    border-radius: 4px;
+    padding-left: 10px !important;
+}
+
+legend {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    width: 35%;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    padding: 5px 5px 5px 10px;
+}
